Data Validation Completed

--- a/research/01_data_ingestion.ipynb
+++ b/research/01_data_ingestion.ipynb
@@ -96,11 +96,11 @@
     "        self,\n",
     "        config_file_path = CONFIG_FILE_PATH,\n",
     "        params_file_path = PARAMS_FILE_PATH,\n",
-    "        schemas_file_path = SCHEMA_FILE_PATH):\n",
+    "        schema_file_path = SCHEMA_FILE_PATH):\n",
     "\n",
     "        self.config = read_yaml(config_file_path)\n",
     "        self.params = read_yaml(params_file_path)\n",
-    "        self.schemas = read_yaml(schemas_file_path)\n",
+    "        self.schema = read_yaml(schema_file_path)\n",
     "\n",
     "        create_directories([self.config.artifacts_root])\n",
     "\n",
